first version - multilingual

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ PINECONE_ENV=gcp-starter
 OPENAI_API_KEY=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
 OPENAI_API_MODEL=gpt-3.5-turbo
 OPENAI_API_TEMPERATURE=0.5
+HUGGING_FACE_API_KEY=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
